frontend/test/should_fail/deque_001.grg
using deque_model_001;

test testWrongType {
	a:A;

	if {
		a.stringValue in a.intDeque;
	}
}
